tests/golden/runtime/index_missing.stderr
error[endpoint]: unhandled err reached main: "missing index 9"
  born in main at index_missing.kso:2
