tests/golden/runtime/index_missing.kso
main =
  prices = [30 10 20]
  print "ninth: {prices[9]}"
